edit product table, observer for product, filters
